--- a/TravelExpenses/Pages/Shared/_Footer.cshtml
+++ b/TravelExpenses/Pages/Shared/_Footer.cshtml
@@ -1,6 +1,6 @@
 ﻿<footer class="footer">
     <div class="d-sm-flex justify-content-center justify-content-sm-between">
-        <span class="text-muted text-center text-sm-left d-block d-sm-inline-block"> &copy; 2019 - TravelExpenses - <a asp-area="" asp-page="/Privacy">Privacy</a></span>
+        <span class="text-muted text-center text-sm-left d-block d-sm-inline-block"> &copy; 2019 - Travel Expenses </span>
 
     </div>
 </footer>
