--- a/TravelExpenses/Pages/Shared/_Layout.cshtml
+++ b/TravelExpenses/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TravelExpenses</title>
+    <title>@ViewData["Title"] - Travel Expenses</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,6 +26,7 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="~/css/style.css">
     <!-- endinject -->
+    <link rel="shortcut icon" href="~/capadeozono-favicon.ico">
 </head>
 <body>
     <div class="container-scroller">
