--- a/TravelExpenses/Pages/Users/List.cshtml
+++ b/TravelExpenses/Pages/Users/List.cshtml
@@ -7,3 +7,42 @@
 
 <h1>Administración de Usuarios</h1>
 
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title">Usuarios</h4>
+        <form class="forms-sample">
+            <div class="form-group row">
+                <label for="exampleInputUsername2" class="col-sm-3 col-form-label">Clave</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" id="exampleInputUsername2" placeholder="Clave Usuario">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="exampleInputEmail2" class="col-sm-3 col-form-label">Descripción</label>
+                <div class="col-sm-9">
+                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Nombre">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="exampleInputEmail2" class="col-sm-3 col-form-label">Descripción</label>
+                <div class="col-sm-9">
+                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Nombre">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="exampleInputMobile" class="col-sm-3 col-form-label">Tipo</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" id="exampleInputMobile" placeholder="Apellido">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="exampleInputMobile" class="col-sm-3 col-form-label">Tipo</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" id="exampleInputMobile" placeholder="Tipo de Usuario">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary mr-2">Submit</button>
+            <button class="btn btn-light">Cancel</button>
+        </form>
+    </div>
+</div>
