--- a/TravelExpenses/Pages/Users/List.cshtml
+++ b/TravelExpenses/Pages/Users/List.cshtml
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <button type="submit" class="btn btn-primary mr-2">Submit</button>
-            <button class="btn btn-light">Cancel</button>
+            <button class="btn btn-light">Cancelar</button>
         </form>
     </div>
 </div>
