Working on catalogs

--- a/TravelExpenses/Pages/Catalogs/Estados.cshtml
+++ b/TravelExpenses/Pages/Catalogs/Estados.cshtml
@@ -12,7 +12,7 @@
     {
         <tr>
             <td>@estado.IdEstado</td>
-            <td>@estado.Descripcion</td>            
+            <td>@estado.NombreEstado</td>            
         </tr>
     }
 </table>
