--- a/TravelExpenses/Pages/Shared/_Menu.cshtml
+++ b/TravelExpenses/Pages/Shared/_Menu.cshtml
@@ -15,6 +15,8 @@
                 <div class="collapse" id="ui-basic">
                     <ul class="nav flex-column sub-menu">
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/CatalogosGenerales">Generales</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Estados">Estados</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Estados">Ciudades</a></li>
                     </ul>
                 </div>
             </li>
