--- a/TravelExpenses/Pages/Shared/_Menu.cshtml
+++ b/TravelExpenses/Pages/Shared/_Menu.cshtml
@@ -16,7 +16,7 @@
                     <ul class="nav flex-column sub-menu">
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/CatalogosGenerales">Generales</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Estados">Estados</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Estados">Ciudades</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Ciudades">Ciudades</a></li>
                     </ul>
                 </div>
             </li>
