Include views for catalogs

--- a/TravelExpenses/Pages/Shared/_Menu.cshtml
+++ b/TravelExpenses/Pages/Shared/_Menu.cshtml
@@ -17,6 +17,10 @@
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/CatalogosGenerales">Generales</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Estados">Estados</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Ciudades">Ciudades</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Empresas">Empresas</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Gastos">Conceptos de Gastos</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Ciudades">Cuentas Contables/ Centros de Costos</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Departamentos">Áreas/Departamentos</a></li>
                     </ul>
                 </div>
             </li>
