--- a/TravelExpenses/Pages/Shared/_Menu.cshtml
+++ b/TravelExpenses/Pages/Shared/_Menu.cshtml
@@ -14,9 +14,8 @@
                 </a>
                 <div class="collapse" id="ui-basic">
                     <ul class="nav flex-column sub-menu">
-                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/CatalogosGenerales">Generales</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Estados">Estados</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Ciudades">Ciudades</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/CatalogosGenerales">Generales</a></li>                        
+                        <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Destinos">Destinos</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Empresas">Empresas</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Gastos">Conceptos de Gastos</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="./Catalogs/Ciudades">Cuentas Contables/ Centros de Costos</a></li>
