--- a/TravelExpenses/Pages/Catalogs/Destinos.cshtml
+++ b/TravelExpenses/Pages/Catalogs/Destinos.cshtml
@@ -10,18 +10,24 @@
 
     <input type="hidden" asp-for="Ciudad.IdCiudad" />
     <div class="form-group">
+        <label asp-for="Ciudad.Estado.Pais"></label>
+        @Html.DropDownListFor(x => Model.Paises, new SelectList(Model.Paises, "ClavePais", "Nombre"), htmlAttributes: new { @class = "form-control", id = "Pais" })
+        <span class="text-danger" asp-validation-for="Paises"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Ciudad.Estado"></label>
+        @Html.DropDownListFor(x => Model.Estados, new SelectList(Model.Estados, "IdEstado", "NombreEstado"), htmlAttributes: new { @class = "form-control", id = "Estado" })
+        <span class="text-danger" asp-validation-for="Ciudad.Estado"></span>
+    </div>   
+    <div class="form-group">
         <label asp-for="Ciudad.Ciudad"></label>
         <input asp-for="Ciudad.Ciudad" class="form-control" />
         <span class="text-danger" asp-validation-for="Ciudad.Ciudad"></span>
     </div>
-    <div class="form-group">
-        <label asp-for="Ciudad.Estado"></label>
-        <select class="form-control" asp-for="Ciudad.Estado"
-        ></select>
-        <span class="text-danger" asp-validation-for="Ciudad.Estado"></span>
-    </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <button type="submit" class="btn btn-primary">Cancelar</button>
 </form>
 <table class="table">
     <th>
