--- a/TravelExpenses/Pages/Index.cshtml
+++ b/TravelExpenses/Pages/Index.cshtml
@@ -3,11 +3,60 @@
 @{
     ViewData["Title"] = "Main Page";
 }
+<style>
 
+    tr th {
+        color: #272525;
+        font-size: 15px !important;
+    }
+
+    table, td {
+        border: 2px double #D9D7D7;
+    }
+
+        table thead tr th {
+            border: 2px solid #D9D7D7;
+        }
+
+        table thead {
+            background-color: #F0EFEF;
+        }
+
+    #Solicitudes {
+        color: #272525;
+    }
+
+    #EnviarSolicitud {
+        margin-bottom: 5px;
+        margin-left: -4px;
+        color: #272525;
+        font-weight: 400;
+        font-size: 15px !important;
+        background-color: #F0EFEF;
+        border: 1px solid #DEDCDC;
+    }
+
+        #EnviarSolicitud:hover {
+            background-color: #BFBDBD;
+        }
+</style>
 <div class="text-center">
     <div class="card">
+        <div class="card-header" id="Solicitudes"><h3>Solicitudes</h3></div>
         <div class="card-body">
-            <h4 class="card-title">Solicitudes</h4>
+            <div class="container">
+                <div class="row" id="seccionBtn">
+                    <div class="col-2"><a id="EnviarSolicitud" class="btn" asp-page="./Solicitudes/Solicitudes"><i class="mdi  mdi-pencil"></i>Agregar</a></div>
+                    <div class="col-2">
+                        <a id="EnviarSolicitud" class="btn" asp-page="./Solicitudes/Solicitudes">
+                            <i class="mdi  mdi-comment-text-outline
+"></i>Editar
+                        </a>
+                    </div>
+                    <div class="col-2"><a id="EnviarSolicitud" class="btn"><i class="mdi  mdi-close-circle-outline"></i>Eliminar</a></div>
+                    <div class="col-6"></div>
+                </div>
+            </div>
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead>
@@ -24,6 +73,7 @@
                         <tr>
                             <td>F001</td>
                             <td>Anticipo</td>
+
                             <td>Luis Mario Diaz</td>
                             <td class="text-danger"> $5000 <i class="mdi mdi-arrow-down"></i></td>
                             <td class="text-danger"> 0 <i class="mdi mdi-arrow-down"></i></td>
@@ -42,4 +92,5 @@
             </div>
         </div>
     </div>
+
 </div>
