--- a/TravelExpenses/Pages/Solicitudes/Solicitudes.cshtml
+++ b/TravelExpenses/Pages/Solicitudes/Solicitudes.cshtml
@@ -1,8 +1,7 @@
 ﻿@page
-@model TravelExpenses.Pages.Requests.SolicitudesModel1
+@model TravelExpenses.Pages.Requests.SolicitudesModel
 @{
     ViewData["Title"] = "Solicitudes";
-    Layout = "./Pages/Shared/_Layout.cshtml";
 }
 
  
