--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -14,11 +14,11 @@
                 </a>
                 <div class="collapse" id="ui-basic">
                     <ul class="nav flex-column sub-menu">                                               
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogs/Destinos">Destinos</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogs/Empresas">Empresas</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogs/Gastos">Conceptos de Gastos</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogs/Ciudades">Cuentas Contables/ Centros de Costos</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogs/Departamentos">Áreas/Departamentos</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Destinos">Destinos</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Empresas">Empresas</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Gastos">Conceptos de Gastos</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Ciudades">Cuentas Contables/ Centros de Costos</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Departamentos">Áreas/Departamentos</a></li>
                     </ul>
                 </div>
             </li>
