Registro de solicitudes

--- a/TravelExpenses/Pages/Shared/_Layout.cshtml
+++ b/TravelExpenses/Pages/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
 
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/Solicitudes.css" />
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/js/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/js/vendors/base/vendor.bundle.base.css">
