--- a/TravelExpenses/Pages/Catalogos/Departamentos.cshtml
+++ b/TravelExpenses/Pages/Catalogos/Departamentos.cshtml
@@ -7,3 +7,27 @@
 
 <h1>Departamentos</h1>
 
+
+<div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label class="control-label">Clave Departamento</label>
+                        <input asp-for="Departamento.IdDepto" class="form-control" />
+                        <span asp-validation-for="Departamento.IdDepto" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Nombre</label>
+                        <input asp-for="Departamento.Nombre" class="form-control" />
+                        <span asp-validation-for="Departamento.Nombre" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Guardar" class="btn btn-primary" />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
