--- a/TravelExpenses/Pages/Catalogos/Destinos.cshtml
+++ b/TravelExpenses/Pages/Catalogos/Destinos.cshtml
@@ -10,17 +10,17 @@
 
     <input type="hidden" asp-for="Ciudad.IdCiudad" />
     <div class="form-group">
-        <label asp-for="Ciudad.Estado.Pais"></label>
+        <label class="control-label">País</label>
         @Html.DropDownListFor(x => Model.Paises, new SelectList(Model.Paises, "ClavePais", "Nombre"), htmlAttributes: new { @class = "form-control", id = "Pais" })
         <span class="text-danger" asp-validation-for="Paises"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Ciudad.Estado"></label>
+        <label class="control-label">Estado</label>
         @Html.DropDownListFor(x => Model.Estados, new SelectList(Model.Estados, "IdEstado", "NombreEstado"), htmlAttributes: new { @class = "form-control", id = "Estado" })
         <span class="text-danger" asp-validation-for="Ciudad.Estado"></span>
     </div>   
     <div class="form-group">
-        <label asp-for="Ciudad.Ciudad"></label>
+        <label class="control-label"">Ciudad</label>
         <input asp-for="Ciudad.Ciudad" class="form-control" />
         <span class="text-danger" asp-validation-for="Ciudad.Ciudad"></span>
     </div>
@@ -30,11 +30,11 @@
     <button type="submit" class="btn btn-primary">Cancelar</button>
 </form>
 <table class="table">
-    <th>
+    <tr>
        <td>Estado</td>
         <td>Clave Ciudad</td>
         <td>Ciudad</td>
-    </th>
+    </tr>
     @foreach (var ciudad in Model.Ciudades)
     {
         <tr>
