--- a/TravelExpenses/Pages/Catalogos/Empresas.cshtml
+++ b/TravelExpenses/Pages/Catalogos/Empresas.cshtml
@@ -7,28 +7,30 @@
 
 <h1>Empresas</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Empresa.RFC" class="control-label"></label>
-                <input asp-for="Empresa.RFC" class="form-control" />
-                <span asp-validation-for="Empresa.RFC" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Empresa.Nombre" class="control-label"></label>
-                <input asp-for="Empresa.Nombre" class="form-control" />
-                <span asp-validation-for="Empresa.Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Empresa.FechaAlta" class="control-label"></label>
-                <input asp-for="Empresa.FechaAlta" class="form-control" />
-                <span asp-validation-for="Empresa.FechaAlta" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-default" />
-            </div>
-        </form>
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label class="control-label">RFC</label>
+                    <input asp-for="Empresa.RFC" class="form-control" />
+                    <span asp-validation-for="Empresa.RFC" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Descripción Empresa</label>
+                    <input asp-for="Empresa.Nombre" class="form-control" />
+                    <span asp-validation-for="Empresa.Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Fecha Alta</label>
+                    <input asp-for="Empresa.FechaAlta" class="form-control" />
+                    <span asp-validation-for="Empresa.FechaAlta" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
 </div>
