--- a/TravelExpenses/Pages/Shared/_Layout.cshtml
+++ b/TravelExpenses/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DemoNetCore</title>
+    <title>Ozono - TravelExpenses</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/Solicitudes.css" />
+    <link rel="stylesheet" href="~/css/all.css" />
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/js/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/js/vendors/base/vendor.bundle.base.css">
