--- a/TravelExpenses/Pages/Catalogos/Empresas.cshtml
+++ b/TravelExpenses/Pages/Catalogos/Empresas.cshtml
@@ -10,27 +10,45 @@
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <form method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label class="control-label">RFC</label>
-                    <input asp-for="Empresa.RFC" class="form-control" />
-                    <span asp-validation-for="Empresa.RFC" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Descripción Empresa</label>
-                    <input asp-for="Empresa.Nombre" class="form-control" />
-                    <span asp-validation-for="Empresa.Nombre" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Fecha Alta</label>
-                    <input asp-for="Empresa.FechaAlta" class="form-control" />
-                    <span asp-validation-for="Empresa.FechaAlta" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Guardar" class="btn btn-primary" />
-                </div>
-            </form>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>
+                                RFC
+                            </th>
+                            <th>
+                                Nombre
+                            </th>
+                            <th>
+                                Fecha Alta
+                            </th>
+                            <th>
+                                Editar
+                            </th>                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var empresa in Model.Empresas)
+                        {
+
+                            <tr>
+                                <td>@empresa.RFC</td>
+                                <td>@empresa.Nombre</td>
+                                <td>@empresa.FechaAlta</td>
+                                <td>
+                                    <a class="btn btn-lg"
+                                       asp-page="./AddEmpresas"
+                                       asp-route-rfc="@empresa.RFC">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+
+            </div>
         </div>
     </div>
 </div>
