--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -8,7 +8,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-                    <i class="mdi mdi-circle-outline menu-icon"></i>
+                    <i class="mdi mdi-file-document-box-outline menu-icon"></i>
                     <span class="menu-title">Catálogos</span>
                     <i class="menu-arrow"></i>
                 </a>
