Change logical to controller

--- a/TravelExpenses/Views/Empresa/Empresas.cshtml
+++ b/TravelExpenses/Views/Empresa/Empresas.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model TravelExpenses.Pages.Catalogs.EmpresasModel
+@model TravelExpenses.ViewModels.EmpresaViewModel
 @{
     ViewData["Title"] = "Empresas";
     Layout = "/Pages/Shared/_Layout.cshtml";
