--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -13,9 +13,10 @@
                     <i class="menu-arrow"></i>
                 </a>
                 <div class="collapse" id="ui-basic">
-                    <ul class="nav flex-column sub-menu">                                               
+                    <ul class="nav flex-column sub-menu">
                         <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Destinos">Destinos</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Empresas">Empresas</a></li>
+                        @*<li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Empresas">Empresas</a></li>*@
+                        <li class="nav-item"><a asp-controller="Empresa" asp-action="ListaEmpresas" class="nav-link">Empresas</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Gastos">Conceptos de Gastos</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Ciudades">Cuentas Contables/ Centros de Costos</a></li>
                         <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Departamentos">Áreas/Departamentos</a></li>
