Clean code and create structure for Departamentos

--- a/TravelExpenses/Views/Departamento/Add.cshtml
+++ b/TravelExpenses/Views/Departamento/Add.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@model TravelExpenses.ViewModels.DepartamentoViewModel
+
 @{
     ViewData["Title"] = "Add";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Add</h1>
+<h1>@Model.Departamento</h1>
 
