--- a/TravelExpenses/Views/Empresa/Edit.cshtml
+++ b/TravelExpenses/Views/Empresa/Edit.cshtml
@@ -1,11 +1,6 @@
-﻿
-@model TravelExpenses.ViewModels.EmpresaViewModel
-@{
-    ViewData["Title"] = "Empresas";
-    Layout = "/Pages/Shared/_Layout.cshtml";
-}
+﻿@model TravelExpenses.ViewModels.EmpresaViewModel
 
-<h1>Empresas</h1>
+<h1>@Model.Empresa.Nombre</h1>
 
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
@@ -14,22 +9,22 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label class="control-label">RFC</label>
-                    <input asp-for="Empresa.RFC" class="form-control" />
-                    <span asp-validation-for="Empresa.RFC" class="text-danger"></span>
+                    <input asp-for=@Model.Empresa.RFC class="form-control" />
+                    <span asp-validation-for=@Model.Empresa.RFC class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Descripción Empresa</label>
-                    <input asp-for="Empresa.Nombre" class="form-control" />
-                    <span asp-validation-for="Empresa.Nombre" class="text-danger"></span>
+                    <input asp-for=@Model.Empresa.Nombre class="form-control" />
+                    <span asp-validation-for=@Model.Empresa.Nombre class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Fecha Alta</label>
-                    <input asp-for="Empresa.FechaAlta" class="form-control" />
-                    <span asp-validation-for="Empresa.FechaAlta" class="text-danger"></span>
+                    <input asp-for=@Model.Empresa.FechaAlta class="form-control" />
+                    <span asp-validation-for=@Model.Empresa.FechaAlta class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    Activo <input asp-for="Empresa.Activo" class="form-check" type="checkbox" />
-                    <span asp-validation-for="Empresa.Activo" class="text-danger"></span>
+                    Activo <input asp-for=@Model.Empresa.Activo class="form-check" type="checkbox" />
+                    <span asp-validation-for=@Model.Empresa.Activo class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Guardar" class="btn btn-primary" />
