--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -16,8 +16,8 @@
                     <ul class="nav flex-column sub-menu">
                         <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Destinos">Destinos</a></li>
                         <li class="nav-item"><a asp-controller="Empresa" asp-action="ListaEmpresas" class="nav-link">Empresas</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Gastos">Conceptos de Gastos</a></li>
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Ciudades">Cuentas Contables/ Centros de Costos</a></li>                        
+                        <li class="nav-item"><a asp-controller="Gasto" asp-action="Lista" class="nav-link">Conceptos de Gastos</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Ciudades">Cuentas Contables/ Centros de Costos</a></li>
                         <li class="nav-item"><a asp-controller="Departamento" asp-action="Lista" class="nav-link">Áreas/Departamentos</a></li>
                     </ul>
                 </div>
