--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -23,11 +23,20 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" asp-page="/Users/List">
+                <!--<a class="nav-link" asp-page="/Users/List">-->
+                <a class="nav-link" data-toggle="collapse" href="#ui-basic2" aria-expanded="false" aria-controls="ui-basic2">
+
                     <i class="mdi mdi-account menu-icon"></i>
                     <span class="menu-title">Usuarios</span>
+                    <i class="menu-arrow"></i>
                 </a>
-            </li>
+                <div class="collapse" id="ui-basic2">
+                    <ul class="nav flex-column sub-menu">
+                        <li class="nav-item"> <a class="nav-link" asp-page="/Usuarios/UsuariosRoles">Roles</a></li>
+
+                    </ul>
+                </div>
+</li>
         </ul>
     </nav>
      
