--- a/TravelExpenses/Pages/Shared/_Layout.cshtml
+++ b/TravelExpenses/Pages/Shared/_Layout.cshtml
@@ -99,6 +99,9 @@
     <script src="~/js/data-table.js"></script>
     <script src="~/js/jquery.dataTables.js"></script>
     <script src="~/js/dataTables.bootstrap4.js"></script>
+    <!-- Data Table JS -->
+    <script src="~/js/data-table/jquery.dataTables.min.js"></script>
+    <script src="~/js/data-table/data-table-act.js"></script>
     <!-- End custom js for this page-->
     @RenderSection("Scripts", required: false)
 </body>
