--- a/TravelExpenses/Views/CentroCostoEmpresa/Lista.cshtml
+++ b/TravelExpenses/Views/CentroCostoEmpresa/Lista.cshtml
@@ -1,21 +1,27 @@
-﻿@model TravelExpenses.ViewModels.GastoViewModel
+﻿@model TravelExpenses.ViewModels.CentroCostoViewModel
 @{
-    ViewData["Title"] = "Gastos";
+    ViewData["Title"] = "Centro de Costos";
     Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Gastos</h1>
+<h1>Centro de Costos</h1>
 
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
-        <a asp-controller="Gasto" asp-action="Edit" class="btn btn-primary">Agregar Nuevo Gasto</a>
+        <a asp-controller="CentroCosto" asp-action="Edit" class="btn btn-primary">Agregar Nuevo Centro de Costo</a>
         <div class="card-body">
             <div class="table-responsive">
+                <div class="form-group">
+                    <label class="control-label">Empresa</label>
+                    @Html.DropDownListFor(x => Model.Empresas, new SelectList(Model.Empresas, "RFC", "Nombre"), htmlAttributes: new { @class = "form-control", id = "Pais" })
+                    <span class="text-danger" asp-validation-for="Empresas"></span>
+                </div>
+
                 <table id="data-table-basic" class="table table-striped">
                     <thead>
                         <tr>
                             <th>
-                                Clave Gasto
+                                Clave Centro de Costo
                             </th>
                             <th>
                                 Nombre
@@ -26,14 +32,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var gasto in Model.Gastos)
+                        @foreach (var centro in Model.CentrosCostos)
                         {
 
                             <tr>
-                                <td>@gasto.IdGasto</td>
-                                <td>@gasto.Nombre</td>
+                                <td>@centro.ClaveCentroCosto</td>
+                                <td>@centro.Nombre</td>
                                 <td>
-                                    <a class="btn btn-lg" asp-controller="Gasto" asp-action="Edit" asp-route-idGasto="@gasto.IdGasto">
+                                    <a class="btn btn-lg" asp-controller="CentroCosto" asp-action="Edit" asp-route-clavecentrocosto="@centro.ClaveCentroCosto">
                                         <i class="fas fa-edit"></i>
                                     </a>
                                 </td>
