--- a/TravelExpenses/Views/Departamento/Edit.cshtml
+++ b/TravelExpenses/Views/Departamento/Edit.cshtml
@@ -11,11 +11,11 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label class="control-label">Clave Departamento</label>
-                    <input asp-for=@Model.Departamento.IdDepto class="form-control" />
-                    <span asp-validation-for=@Model.Departamento.IdDepto class="text-danger"></span>
+                    <input asp-for=@Model.Departamento.ClaveDepto class="form-control" />
+                    <span asp-validation-for=@Model.Departamento.ClaveDepto class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label class="control-label">Descripción Empresa</label>
+                    <label class="control-label">Descripción Departamento</label>
                     <input asp-for=@Model.Departamento.Nombre class="form-control" />
                     <span asp-validation-for=@Model.Departamento.Nombre class="text-danger"></span>
                 </div>
