--- a/TravelExpenses/Views/Empresa/Edit.cshtml
+++ b/TravelExpenses/Views/Empresa/Edit.cshtml
@@ -17,11 +17,11 @@
                     <input asp-for=@Model.Empresa.Nombre class="form-control" />
                     <span asp-validation-for=@Model.Empresa.Nombre class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <label class="control-label">Fecha Alta</label>
-                    <input asp-for=@Model.Empresa.FechaAlta class="form-control" />
-                    <span asp-validation-for=@Model.Empresa.FechaAlta class="text-danger"></span>                
-                </div>
+                    <input asp-for=@Model.Empresa.FechaAlta class="form-control"   data-provide="datepicker" data-date-autoclose="true" data-date-format="dd/MM/yyyy"/>
+                    <span asp-validation-for=@Model.Empresa.FechaAlta class="text-danger"></span>
+                </div>*@
                 <div class="form-group">
                     Activo <input asp-for=@Model.Empresa.Activo class="form-check" type="checkbox" />
                     <span asp-validation-for=@Model.Empresa.Activo class="text-danger"></span>
