--- a/TravelExpenses/Views/Empresa/ListaEmpresas.cshtml
+++ b/TravelExpenses/Views/Empresa/ListaEmpresas.cshtml
@@ -12,7 +12,7 @@
         <a asp-controller="Empresa" asp-action="Edit" class="btn btn-primary">Agregar Nueva Empresa</a>        
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-striped">
+                <table id="data-table-basic" class="table table-striped">
                     <thead>
                         <tr>
                             <th>
@@ -36,7 +36,7 @@
                             <tr>
                                 <td>@empresa.RFC</td>
                                 <td>@empresa.Nombre</td>
-                                <td>@empresa.FechaAlta</td>
+                                <td>@empresa.FechaAlta.ToShortDateString()</td>
                                 <td>
                                     <a class="btn btn-lg" asp-controller="Empresa" asp-action="Edit" asp-route-RFC="@empresa.RFC">
                                         <i class="fas fa-edit"></i>
