--- a/TravelExpenses/Views/Politica/Edit.cshtml
+++ b/TravelExpenses/Views/Politica/Edit.cshtml
@@ -8,17 +8,15 @@
     <div class="card">
         <div class="card-body">
             <form method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>                
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label class="control-label">Clave Centro Costo</label>
-                    <input asp-for=@Model.CentroCosto.ClaveCentroCosto class="form-control" />
-                    <span asp-validation-for=@Model.CentroCosto.ClaveCentroCosto class="text-danger"></span>
+                    <input asp-for=@Model.CentroCosto.ClaveCentroCosto class="form-control" type="hidden" />
                 </div>
                 <div class="form-group">
-                    <label class="control-label">Descripción Centro de Costo</label>
+                    <label class="control-label">Descripción moneda</label>
                     <input asp-for=@Model.CentroCosto.Nombre class="form-control" />
                     <span asp-validation-for=@Model.CentroCosto.Nombre class="text-danger"></span>
-                </div>
+                </div>                
                 <div class="form-group">
                     <input type="submit" value="Guardar" class="btn btn-primary" />
                 </div>
