--- a/TravelExpenses/Views/Moneda/Edit.cshtml
+++ b/TravelExpenses/Views/Moneda/Edit.cshtml
@@ -10,7 +10,9 @@
             <form method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <input asp-for=@Model.moneda.ClaveMoneda class="form-control" type="hidden" />
+                    <label class="control-label">Clave Moneda</label>
+                    <input asp-for=@Model.moneda.ClaveMoneda class="form-control" />
+                    <span asp-validation-for=@Model.moneda.ClaveMoneda class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Descripción Moneda</label>
