--- a/TravelExpenses/Pages/Catalogos/Estados.cshtml
+++ b/TravelExpenses/Pages/Catalogos/Estados.cshtml
@@ -15,7 +15,7 @@
     {
         <tr>
             <td>@estado.IdEstado</td>
-            <td>@estado.NombreEstado</td>
+            <td>@estado.Descripcion</td>
         </tr>
     }
 </table>
